--- a/web/templates/home.html
+++ b/web/templates/home.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
+{%load static%}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
     <h1>Homepage</h1>
-</head>
+
 <body>
 
 </body>
